--- a/templates/liquid/Measure.liquid
+++ b/templates/liquid/Measure.liquid
@@ -1,8 +1,12 @@
 {%include narrative-start.html %}
-{%include knowledge-artifact-metadata.html %}
 {%include measure-metadata.html measure=Measure %}
-{%include measure-population-criteria.html measure=Measure %}
+{%include measure-group.html measure=Measure %}
 {%include measure-supplementaldata.html measure=Measure %}
 {%include measure-logic.html measure=Measure %}
+{%include measure-logic-populationcriteria.html measure=Measure %}
+{%include measure-logic-definitions.html measure=Measure %}
+{%include measure-logic-terminology.html measure=Measure %}
+{%include measure-logic-dependencies.html measure=Measure %}
+{%include measure-logic-datarequirements.html measure=Measure %}
 {%include version.html %}
 {%include narrative-end.html %}
