--- a/templates/liquid/measure-logic.html
+++ b/templates/liquid/measure-logic.html
@@ -4,21 +4,19 @@
 {% endif %}
 
 {% if include.measure.extension.where(url = 'http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/cqfm-effectiveDataRequirements' or url = 'http://hl7.org/fhir/uv/crmi/StructureDefinition/crmi-effectiveDataRequirements').exists() %}
-  {% for contained in include.measure.contained.where(id.contains('effective-data-requirements')) %}
-  {%include related-artifact.html relatedArtifact=contained.relatedArtifact %}
-  {%include direct-reference-code.html contained=contained %}
-  {% if contained.parameter.exists() %}
-  {%include parameter.html header='Parameter' parameter=contained.parameter %}
-  {% endif %}
-  {% if contained.dataRequirement.exists() %}
-  <tr>
-    <th class="section-header" colspan="2" scope="row"><a name="effective-data-requirements"> </a>Measure Logic Data Requirements</th>
-  </tr>
-  {% endif %}
-  {%include datarequirement.html header='Data Requirement' dataRequirement=contained.dataRequirement %}
-  {% if contained.extension.where(url = 'http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/cqfm-logicDefinition' or url = 'http://hl7.org/fhir/StructureDefinition/cqf-logicDefinition').exists() %}
-  {%include section-header.html header='Measure Logic Definitions' %}
-  {% endif %}
-  {%include logic-definition.html header='Data Requirement' contained=contained %}
-  {% endfor %}
+<tr>
+  <th scope="row" class="row-header">Contents</th>
+  <td class="content-container">
+    <em><a href="#population-criteria">Population Criteria</a></em>
+    <br />
+    <em><a href="#definitions">Logic Definitions</a></em>
+    <br />
+    <em><a href="#terminology">Terminology</a></em>
+    <br />
+    <em><a href="#dependencies">Dependencies</a></em>
+    <br />
+    <em><a href="#data-requirements">Data Requirements</a></em>
+    <br />
+  </td>
+</tr>
 {% endif %}
