--- a/templates/liquid/plandefinition-metadata.html
+++ b/templates/liquid/plandefinition-metadata.html
@@ -1,8 +1,2 @@
-{% if include.plandefinition.identifier.exists() or include.plandefinition.version.exists() or include.plandefinition.type.exists() or
-include.plandefinition.subject.exists() %}
-{%include section-header.html header='PlanDefinition Metadata' %}
-{%include default-list.html header='Identifier' content=include.plandefinition.identifier %}
-{%include default.html header='Version Number' content=include.plandefinition.version %}
-{%include default.html header='PlanDefinition Type' content=include.plandefinition.type %}
-{%include default.html header='PlanDefinition Subject' content=include.plandefinition.subject %}
-{% endif %}
+{%include knowledge-artifact-metadata.html resource=include.plandefinition %}
+{%include default.html header='Type' content=include.plandefinition.type %}
