--- a/templates/liquid/related-artifact-terminology.html
+++ b/templates/liquid/related-artifact-terminology.html
@@ -1,17 +1,12 @@
 {% if include.relatedArtifact.exists() %}
 {% for relatedArtifact in include.relatedArtifact %}
+{% if relatedArtifact.type = 'depends-on' and (relatedArtifact.display.lower().contains('value') or relatedArtifact.resource.lower().contains('value')) or (relatedArtifact.display.lower().contains('code') or relatedArtifact.resource.lower().contains('code')) %}
 <tr>
-  {% if relatedArtifact.where(type = 'documentation').exists() %}
-  {%include row-header.html header='Documentation' %}
+  {% if relatedArtifact.display.lower().contains('value') or relatedArtifact.resource.lower().contains('value') %}
+  {%include row-header.html header='Value Set' %}
   {% endif %}
-  {% if relatedArtifact.where(type = 'justification').exists() %}
-  {%include row-header.html header='Justification' %}
-  {% endif %}
-  {% if relatedArtifact.where(type = 'citation').exists() %}
-  {%include row-header.html header='Citation' %}
-  {% endif %}
-  {% if relatedArtifact.where(type = 'depends-on').exists() %}
-  {%include row-header.html header='Dependency' %}
+  {% if relatedArtifact.display.lower().contains('code') or relatedArtifact.resource.lower().contains('code') %}
+  {%include row-header.html header='Code System' %}
   {% endif %}
   <td class="content-container">
     {% if relatedArtifact.display.exists() %}
@@ -22,11 +17,7 @@
     {% endif %}
     {% endif %}
     {% if relatedArtifact.citation.exists() %}
-    {% if relatedArtifact.type = 'citation' %}
-    {{relatedArtifact.citation}}
-    {% else %}
     <em>Citation</em>: {{relatedArtifact.citation}}
-    {% endif %}
     {% endif %}
     {% if relatedArtifact.url.exists() %}
     <em>Content URL</em>: {{relatedArtifact.url}}
@@ -47,5 +38,6 @@
     {% endif %}
   </td>
 </tr>
+{% endif %} 
 {% endfor %}
 {% endif %}
