--- a/templates/liquid/row-header.html
+++ b/templates/liquid/row-header.html
@@ -1,5 +1,13 @@
 {% if include.colspan.exists() %}
+{% if include.link.exists() %}
+<th scope="row" colspan="{{include.colspan}}" class="row-header"><a name="{{include.link}}">{{include.header}}</a></th>
+{% else %}
 <th scope="row" colspan="{{include.colspan}}" class="row-header">{{include.header}}</th>
+{% endif %}
+{% else %}
+{% if include.link.exists() %}
+<th scope="row" class="row-header"><a name="{{include.link}}">{{include.header}}</a></th>
 {% else %}
 <th scope="row" class="row-header">{{include.header}}</th>
+{% endif %}
 {% endif %}
