--- a/templates/liquid/knowledge-artifact-metadata.html
+++ b/templates/liquid/knowledge-artifact-metadata.html
@@ -1,6 +1,5 @@
 {%include section-header.html header='Metadata' %}
-{%include default.html header='Name (machine-readable)' content=include.resource.name %}
-{%include default.html header='Title (human-readable)' content=include.resource.title %}
+{%include default.html header='Title' content=include.resource.title %}
 {%include default.html header='Subtitle' content=include.resource.subtitle %}
 {%include default.html header='Version' content=include.resource.version %}
 {%include knowledge-artifact-identifier.html resource=include.resource %}
