--- a/templates/liquid/measure-group-population-definitions.html
+++ b/templates/liquid/measure-group-population-definitions.html
@@ -4,7 +4,41 @@
       {% if population.criteria.language.startsWith('text/cql') %}
         {% for extension in include.contained.extension.where(url = 'http://hl7.org/fhir/us/cqfmeasures/StructureDefinition/cqfm-logicDefinition' or url = 'http://hl7.org/fhir/StructureDefinition/cqf-logicDefinition') %}
           {% if extension.extension.where(url = 'name').value = population.criteria.expression %}
-            {% assign aheader = population.code.coding.first().display %}
+            {% if population.code.coding.first().display.exists() %}
+              {% assign aheader = population.code.coding.first().display %}
+            {% else %}
+              {% if population.code.coding.where(code = 'initial-population') or population.code.coding.where(code = 'numerator') or population.code.coding.where(code = 'numerator-exclusion') or population.code.coding.where(code = 'denominator') or population.code.coding.where(code = 'denominator-exclusion') or population.code.coding.where(code = 'denominator-exception') or population.code.coding.where(code = 'measure-population') or population.code.coding.where(code = 'measure-population-exclusion') or population.code.coding.where(code = 'measure-observation') %}
+                {% if population.code.coding.where(code = 'initial-population') %}
+                  {% assign aheader = 'Initial Population' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'numerator') %}
+                  {% assign aheader = 'Numerator' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'numerator-exclusion') %}
+                  {% assign aheader = 'Numerator Exclusion' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'denominator') %}
+                  {% assign aheader = 'Denominator' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'denominator-exclusion') %}
+                  {% assign aheader = 'Denominator Exclusion' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'denominator-exception') %}
+                  {% assign aheader = 'Denominator Exception' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'measure-population') %}
+                  {% assign aheader = 'Measure Population' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'measure-population-exclusion') %}
+                  {% assign aheader = 'Measure Population Exclusion' %}
+                {% endif %}
+                {% if population.code.coding.where(code = 'measure-observation') %}
+                  {% assign aheader = 'Measure Observation' %}
+                {% endif %}
+              {% else %}
+                  {% assign aheader = 'Unknown Population Type' %}
+              {% endif %}
+            {% endif %}
             {%include logic-definition-primary.html extension=extension header=aheader %}
           {% endif %}
         {% endfor %}
